--- a/configuration.properties
+++ b/configuration.properties
@@ -2,3 +2,15 @@
 amazonUrl=https://www.amazon.com
 
 browser=chrome
+
+teachproeducationUrl=https://www.techproeducation.com
+ebayUrl=https://www.bestbuy.com
+
+CHQAUrl=https://qa-environment.concorthotel.com/
+editorUrl=https://editor.datatables.net/
+
+
+GMIBankUrl= https://www.gmibank.com/
+gmibankUsernameValid = employee32
+gmibankUPasswordValid = team32team32-
+ssn = 248-63-2567
